--- a/web/package.json
+++ b/web/package.json
@@ -22,5 +22,8 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
